Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -608,7 +608,8 @@
       "\tEpoch: 49\tTrain loss: 0.03\tTrain Acc: 98.954875\n",
       "\tEpoch: 49\tTest loss: 1.273\tTest Acc: 80.747525\n",
       "==========================\n",
-      "Epoch: 50 i : 317 and loss: 0.013 acc: 0.9921875\r"
+      "\tEpoch: 50\tTrain loss: 0.026\tTrain Acc: 99.10455\n",
+      "Epoch: 50 i : 21 and loss: 1.574 acc: 0.7265625\r"
      ]
     }
    ],
