--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -609,7 +609,9 @@
       "\tEpoch: 49\tTest loss: 1.273\tTest Acc: 80.747525\n",
       "==========================\n",
       "\tEpoch: 50\tTrain loss: 0.026\tTrain Acc: 99.10455\n",
-      "Epoch: 50 i : 21 and loss: 1.574 acc: 0.7265625\r"
+      "\tEpoch: 50\tTest loss: 1.452\tTest Acc: 79.963755\n",
+      "==========================\n",
+      "Epoch: 51 i : 47 and loss: 0.002 acc: 1.0921875\r"
      ]
     }
    ],
