--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -676,7 +676,10 @@
       "\tEpoch: 77\tTrain loss: 0.037\tTrain Acc: 98.87675\n",
       "\tEpoch: 77\tTest loss: 1.714\tTest Acc: 77.225875\n",
       "==========================\n",
-      "Epoch: 78 i : 80 and loss: 0.018 acc: 1.0687525\r"
+      "\tEpoch: 78\tTrain loss: 0.047\tTrain Acc: 98.61475\n",
+      "\tEpoch: 78\tTest loss: 1.794\tTest Acc: 79.315375\n",
+      "==========================\n",
+      "Epoch: 79 i : 113 and loss: 0.068 acc: 0.9843755\r"
      ]
     }
    ],
