Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -498,7 +498,8 @@
       "\tEpoch: 18\tTrain loss: 0.189\tTrain Acc: 93.15455\n",
       "\tEpoch: 18\tTest loss: 1.1\tTest Acc: 73.99125755\n",
       "==========================\n",
-      "Epoch: 19 i : 368 and loss: 0.174 acc: 0.9531255\r"
+      "\tEpoch: 19\tTrain loss: 0.158\tTrain Acc: 94.56625\n",
+      "Epoch: 19 i : 46 and loss: 1.346 acc: 0.7031255\r"
      ]
     }
    ],
