Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -611,7 +611,10 @@
       "\tEpoch: 50\tTrain loss: 0.026\tTrain Acc: 99.10455\n",
       "\tEpoch: 50\tTest loss: 1.452\tTest Acc: 79.963755\n",
       "==========================\n",
-      "Epoch: 51 i : 356 and loss: 0.058 acc: 0.9687555\r"
+      "\tEpoch: 51\tTrain loss: 0.024\tTrain Acc: 99.16875\n",
+      "\tEpoch: 51\tTest loss: 1.372\tTest Acc: 79.825255\n",
+      "==========================\n",
+      "Epoch: 52 i : 15 and loss: 0.007 acc: 1.0921875\r"
      ]
     }
    ],
