--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -499,7 +499,9 @@
       "\tEpoch: 18\tTest loss: 1.1\tTest Acc: 73.99125755\n",
       "==========================\n",
       "\tEpoch: 19\tTrain loss: 0.158\tTrain Acc: 94.56625\n",
-      "Epoch: 19 i : 46 and loss: 1.346 acc: 0.7031255\r"
+      "\tEpoch: 19\tTest loss: 1.082\tTest Acc: 75.175755\n",
+      "==========================\n",
+      "Epoch: 20 i : 29 and loss: 0.082 acc: 0.9531255\r"
      ]
     }
    ],
