Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -679,7 +679,10 @@
       "\tEpoch: 78\tTrain loss: 0.047\tTrain Acc: 98.61475\n",
       "\tEpoch: 78\tTest loss: 1.794\tTest Acc: 79.315375\n",
       "==========================\n",
-      "Epoch: 79 i : 113 and loss: 0.068 acc: 0.9843755\r"
+      "\tEpoch: 79\tTrain loss: 0.034\tTrain Acc: 99.04855\n",
+      "\tEpoch: 79\tTest loss: 1.881\tTest Acc: 78.386255\n",
+      "==========================\n",
+      "Epoch: 80 i : 189 and loss: 0.082 acc: 0.9843755\r"
      ]
     }
    ],
