Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -614,7 +614,8 @@
       "\tEpoch: 51\tTrain loss: 0.024\tTrain Acc: 99.16875\n",
       "\tEpoch: 51\tTest loss: 1.372\tTest Acc: 79.825255\n",
       "==========================\n",
-      "Epoch: 52 i : 301 and loss: 0.009 acc: 0.9921875\r"
+      "\tEpoch: 52\tTrain loss: 0.032\tTrain Acc: 98.92755\n",
+      "Epoch: 52 i : 3 and loss: 1.246 acc: 0.8046875\r"
      ]
     }
    ],
