Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -615,7 +615,9 @@
       "\tEpoch: 51\tTest loss: 1.372\tTest Acc: 79.825255\n",
       "==========================\n",
       "\tEpoch: 52\tTrain loss: 0.032\tTrain Acc: 98.92755\n",
-      "Epoch: 52 i : 3 and loss: 1.246 acc: 0.8046875\r"
+      "\tEpoch: 52\tTest loss: 1.394\tTest Acc: 79.823755\n",
+      "==========================\n",
+      "Epoch: 53 i : 48 and loss: 0.028 acc: 0.9921875\r"
      ]
     }
    ],
