Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -682,7 +682,10 @@
       "\tEpoch: 79\tTrain loss: 0.034\tTrain Acc: 99.04855\n",
       "\tEpoch: 79\tTest loss: 1.881\tTest Acc: 78.386255\n",
       "==========================\n",
-      "Epoch: 80 i : 189 and loss: 0.082 acc: 0.9843755\r"
+      "\tEpoch: 80\tTrain loss: 0.035\tTrain Acc: 98.96455\n",
+      "\tEpoch: 80\tTest loss: 1.871\tTest Acc: 78.161875\n",
+      "==========================\n",
+      "Epoch: 81 i : 236 and loss: 0.002 acc: 1.0609375\r"
      ]
     }
    ],
