Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -617,7 +617,9 @@
       "\tEpoch: 52\tTrain loss: 0.032\tTrain Acc: 98.92755\n",
       "\tEpoch: 52\tTest loss: 1.394\tTest Acc: 79.823755\n",
       "==========================\n",
-      "Epoch: 53 i : 342 and loss: 0.03 acc: 0.98437575\r"
+      "\tEpoch: 53\tTrain loss: 0.025\tTrain Acc: 99.16475\n",
+      "\tEpoch: 53\tTest loss: 1.384\tTest Acc: 80.165755\n",
+      "==========================\n"
      ]
     }
    ],
