--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -685,7 +685,10 @@
       "\tEpoch: 80\tTrain loss: 0.035\tTrain Acc: 98.96455\n",
       "\tEpoch: 80\tTest loss: 1.871\tTest Acc: 78.161875\n",
       "==========================\n",
-      "Epoch: 81 i : 236 and loss: 0.002 acc: 1.0609375\r"
+      "\tEpoch: 81\tTrain loss: 0.034\tTrain Acc: 99.02855\n",
+      "\tEpoch: 81\tTest loss: 1.92\tTest Acc: 77.1858755\n",
+      "==========================\n",
+      "Epoch: 82 i : 283 and loss: 0.075 acc: 0.9843755\r"
      ]
     }
    ],
