--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -619,7 +619,8 @@
       "==========================\n",
       "\tEpoch: 53\tTrain loss: 0.025\tTrain Acc: 99.16475\n",
       "\tEpoch: 53\tTest loss: 1.384\tTest Acc: 80.165755\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 54 i : 97 and loss: 0.026 acc: 0.9843755\r"
      ]
     }
    ],
