--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -501,7 +501,10 @@
       "\tEpoch: 19\tTrain loss: 0.158\tTrain Acc: 94.56625\n",
       "\tEpoch: 19\tTest loss: 1.082\tTest Acc: 75.175755\n",
       "==========================\n",
-      "\tEpoch: 20\tTrain loss: 0.134\tTrain Acc: 95.38475\n"
+      "\tEpoch: 20\tTrain loss: 0.134\tTrain Acc: 95.38475\n",
+      "\tEpoch: 20\tTest loss: 1.046\tTest Acc: 77.375125\n",
+      "==========================\n",
+      "Epoch: 21 i : 3 and loss: 0.185 acc: 0.9375125\r"
      ]
     }
    ],
