Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -620,7 +620,9 @@
       "\tEpoch: 53\tTrain loss: 0.025\tTrain Acc: 99.16475\n",
       "\tEpoch: 53\tTest loss: 1.384\tTest Acc: 80.165755\n",
       "==========================\n",
-      "Epoch: 54 i : 337 and loss: 0.005 acc: 1.0921875\r"
+      "\tEpoch: 54\tTrain loss: 0.022\tTrain Acc: 99.26655\n",
+      "\tEpoch: 54\tTest loss: 1.221\tTest Acc: 81.125255\n",
+      "==========================\n"
      ]
     }
    ],
