Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -688,7 +688,10 @@
       "\tEpoch: 81\tTrain loss: 0.034\tTrain Acc: 99.02855\n",
       "\tEpoch: 81\tTest loss: 1.92\tTest Acc: 77.1858755\n",
       "==========================\n",
-      "Epoch: 82 i : 283 and loss: 0.075 acc: 0.9843755\r"
+      "\tEpoch: 82\tTrain loss: 0.04\tTrain Acc: 98.923755\n",
+      "\tEpoch: 82\tTest loss: 2.062\tTest Acc: 76.048125\n",
+      "==========================\n",
+      "Epoch: 83 i : 389 and loss: 0.038 acc: 0.9921875\r"
      ]
     }
    ],
