Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -622,7 +622,8 @@
       "==========================\n",
       "\tEpoch: 54\tTrain loss: 0.022\tTrain Acc: 99.26655\n",
       "\tEpoch: 54\tTest loss: 1.221\tTest Acc: 81.125255\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 55 i : 88 and loss: 0.025 acc: 0.9921875\r"
      ]
     }
    ],
