Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -691,7 +691,11 @@
       "\tEpoch: 82\tTrain loss: 0.04\tTrain Acc: 98.923755\n",
       "\tEpoch: 82\tTest loss: 2.062\tTest Acc: 76.048125\n",
       "==========================\n",
-      "Epoch: 83 i : 389 and loss: 0.038 acc: 0.9921875\r"
+      "\tEpoch: 83\tTrain loss: 0.042\tTrain Acc: 98.82275\n",
+      "\tEpoch: 83\tTest loss: 1.881\tTest Acc: 77.765755\n",
+      "==========================\n",
+      "\tEpoch: 84\tTrain loss: 0.033\tTrain Acc: 99.08755\n",
+      "Epoch: 84 i : 79 and loss: 2.833 acc: 0.8125625\r"
      ]
     }
    ],
