--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -623,7 +623,10 @@
       "\tEpoch: 54\tTrain loss: 0.022\tTrain Acc: 99.26655\n",
       "\tEpoch: 54\tTest loss: 1.221\tTest Acc: 81.125255\n",
       "==========================\n",
-      "Epoch: 55 i : 374 and loss: 0.011 acc: 1.0765625\r"
+      "\tEpoch: 55\tTrain loss: 0.022\tTrain Acc: 99.21755\n",
+      "\tEpoch: 55\tTest loss: 1.294\tTest Acc: 81.215755\n",
+      "==========================\n",
+      "Epoch: 56 i : 23 and loss: 0.004 acc: 1.0921875\r"
      ]
     }
    ],
