Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -695,7 +695,12 @@
       "\tEpoch: 83\tTest loss: 1.881\tTest Acc: 77.765755\n",
       "==========================\n",
       "\tEpoch: 84\tTrain loss: 0.033\tTrain Acc: 99.08755\n",
-      "Epoch: 84 i : 79 and loss: 2.833 acc: 0.8125625\r"
+      "\tEpoch: 84\tTest loss: 1.983\tTest Acc: 78.425625\n",
+      "==========================\n",
+      "\tEpoch: 85\tTrain loss: 0.031\tTrain Acc: 99.13275\n",
+      "\tEpoch: 85\tTest loss: 1.835\tTest Acc: 78.495555\n",
+      "==========================\n",
+      "Epoch: 86 i : 11 and loss: 0.037 acc: 0.9921875\r"
      ]
     }
    ],
