Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -504,7 +504,8 @@
       "\tEpoch: 20\tTrain loss: 0.134\tTrain Acc: 95.38475\n",
       "\tEpoch: 20\tTest loss: 1.046\tTest Acc: 77.375125\n",
       "==========================\n",
-      "Epoch: 21 i : 367 and loss: 0.129 acc: 0.9531255\r"
+      "\tEpoch: 21\tTrain loss: 0.126\tTrain Acc: 95.63255\n",
+      "Epoch: 21 i : 56 and loss: 0.853 acc: 0.8281255\r"
      ]
     }
    ],
