--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -626,7 +626,9 @@
       "\tEpoch: 55\tTrain loss: 0.022\tTrain Acc: 99.21755\n",
       "\tEpoch: 55\tTest loss: 1.294\tTest Acc: 81.215755\n",
       "==========================\n",
-      "Epoch: 56 i : 324 and loss: 0.017 acc: 0.9921875\r"
+      "\tEpoch: 56\tTrain loss: 0.026\tTrain Acc: 99.08675\n",
+      "\tEpoch: 56\tTest loss: 1.429\tTest Acc: 80.185755\n",
+      "==========================\n"
      ]
     }
    ],
