Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -505,7 +505,9 @@
       "\tEpoch: 20\tTest loss: 1.046\tTest Acc: 77.375125\n",
       "==========================\n",
       "\tEpoch: 21\tTrain loss: 0.126\tTrain Acc: 95.63255\n",
-      "Epoch: 21 i : 56 and loss: 0.853 acc: 0.8281255\r"
+      "\tEpoch: 21\tTest loss: 1.068\tTest Acc: 78.075375\n",
+      "==========================\n",
+      "Epoch: 22 i : 29 and loss: 0.101 acc: 0.9765625\r"
      ]
     }
    ],
