--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -628,7 +628,8 @@
       "==========================\n",
       "\tEpoch: 56\tTrain loss: 0.026\tTrain Acc: 99.08675\n",
       "\tEpoch: 56\tTest loss: 1.429\tTest Acc: 80.185755\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 57 i : 123 and loss: 0.013 acc: 0.9921875\r"
      ]
     }
    ],
