Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -700,7 +700,10 @@
       "\tEpoch: 85\tTrain loss: 0.031\tTrain Acc: 99.13275\n",
       "\tEpoch: 85\tTest loss: 1.835\tTest Acc: 78.495555\n",
       "==========================\n",
-      "Epoch: 86 i : 11 and loss: 0.037 acc: 0.9921875\r"
+      "\tEpoch: 86\tTrain loss: 0.038\tTrain Acc: 98.93455\n",
+      "\tEpoch: 86\tTest loss: 2.045\tTest Acc: 78.682555\n",
+      "==========================\n",
+      "Epoch: 87 i : 109 and loss: 0.017 acc: 0.9921875\r"
      ]
     }
    ],
