--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -629,7 +629,8 @@
       "\tEpoch: 56\tTrain loss: 0.026\tTrain Acc: 99.08675\n",
       "\tEpoch: 56\tTest loss: 1.429\tTest Acc: 80.185755\n",
       "==========================\n",
-      "Epoch: 57 i : 320 and loss: 0.014 acc: 1.0921875\r"
+      "\tEpoch: 57\tTrain loss: 0.023\tTrain Acc: 99.21655\n",
+      "Epoch: 57 i : 33 and loss: 1.296 acc: 0.8125375\r"
      ]
     }
    ],
