Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -630,7 +630,9 @@
       "\tEpoch: 56\tTest loss: 1.429\tTest Acc: 80.185755\n",
       "==========================\n",
       "\tEpoch: 57\tTrain loss: 0.023\tTrain Acc: 99.21655\n",
-      "Epoch: 57 i : 33 and loss: 1.296 acc: 0.8125375\r"
+      "\tEpoch: 57\tTest loss: 1.351\tTest Acc: 81.168125\n",
+      "==========================\n",
+      "Epoch: 58 i : 59 and loss: 0.002 acc: 1.0921875\r"
      ]
     }
    ],
