--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -703,7 +703,10 @@
       "\tEpoch: 86\tTrain loss: 0.038\tTrain Acc: 98.93455\n",
       "\tEpoch: 86\tTest loss: 2.045\tTest Acc: 78.682555\n",
       "==========================\n",
-      "Epoch: 87 i : 109 and loss: 0.017 acc: 0.9921875\r"
+      "\tEpoch: 87\tTrain loss: 0.035\tTrain Acc: 99.02755\n",
+      "\tEpoch: 87\tTest loss: 1.836\tTest Acc: 78.658125\n",
+      "==========================\n",
+      "Epoch: 88 i : 164 and loss: 0.007 acc: 1.0843755\r"
      ]
     }
    ],
