Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -632,7 +632,10 @@
       "\tEpoch: 57\tTrain loss: 0.023\tTrain Acc: 99.21655\n",
       "\tEpoch: 57\tTest loss: 1.351\tTest Acc: 81.168125\n",
       "==========================\n",
-      "Epoch: 58 i : 355 and loss: 0.019 acc: 0.9921875\r"
+      "\tEpoch: 58\tTrain loss: 0.021\tTrain Acc: 99.31475\n",
+      "\tEpoch: 58\tTest loss: 1.317\tTest Acc: 81.212575\n",
+      "==========================\n",
+      "Epoch: 59 i : 7 and loss: 0.049 acc: 0.9843755\r"
      ]
     }
    ],
