Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -507,7 +507,8 @@
       "\tEpoch: 21\tTrain loss: 0.126\tTrain Acc: 95.63255\n",
       "\tEpoch: 21\tTest loss: 1.068\tTest Acc: 78.075375\n",
       "==========================\n",
-      "Epoch: 22 i : 344 and loss: 0.095 acc: 0.9609375\r"
+      "\tEpoch: 22\tTrain loss: 0.111\tTrain Acc: 96.26255\n",
+      "Epoch: 22 i : 8 and loss: 1.074 acc: 0.8125375\r"
      ]
     }
    ],
