Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -706,7 +706,10 @@
       "\tEpoch: 87\tTrain loss: 0.035\tTrain Acc: 99.02755\n",
       "\tEpoch: 87\tTest loss: 1.836\tTest Acc: 78.658125\n",
       "==========================\n",
-      "Epoch: 88 i : 164 and loss: 0.007 acc: 1.0843755\r"
+      "\tEpoch: 88\tTrain loss: 0.035\tTrain Acc: 99.06875\n",
+      "\tEpoch: 88\tTest loss: 1.854\tTest Acc: 78.565555\n",
+      "==========================\n",
+      "Epoch: 89 i : 257 and loss: 0.093 acc: 0.9531255\r"
      ]
     }
    ],
