--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -508,7 +508,9 @@
       "\tEpoch: 21\tTest loss: 1.068\tTest Acc: 78.075375\n",
       "==========================\n",
       "\tEpoch: 22\tTrain loss: 0.111\tTrain Acc: 96.26255\n",
-      "Epoch: 22 i : 8 and loss: 1.074 acc: 0.8125375\r"
+      "\tEpoch: 22\tTest loss: 1.191\tTest Acc: 76.985875\n",
+      "==========================\n",
+      "Epoch: 23 i : 2 and loss: 0.163 acc: 0.9453125\r"
      ]
     }
    ],
