Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -635,7 +635,10 @@
       "\tEpoch: 58\tTrain loss: 0.021\tTrain Acc: 99.31475\n",
       "\tEpoch: 58\tTest loss: 1.317\tTest Acc: 81.212575\n",
       "==========================\n",
-      "Epoch: 59 i : 370 and loss: 0.005 acc: 1.0843755\r"
+      "\tEpoch: 59\tTrain loss: 0.028\tTrain Acc: 99.01275\n",
+      "\tEpoch: 59\tTest loss: 1.238\tTest Acc: 81.287575\n",
+      "==========================\n",
+      "Epoch: 60 i : 20 and loss: 0.033 acc: 0.9765625\r"
      ]
     }
    ],
