Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -709,7 +709,10 @@
       "\tEpoch: 88\tTrain loss: 0.035\tTrain Acc: 99.06875\n",
       "\tEpoch: 88\tTest loss: 1.854\tTest Acc: 78.565555\n",
       "==========================\n",
-      "Epoch: 89 i : 257 and loss: 0.093 acc: 0.9531255\r"
+      "\tEpoch: 89\tTrain loss: 0.042\tTrain Acc: 98.82875\n",
+      "\tEpoch: 89\tTest loss: 1.748\tTest Acc: 78.450625\n",
+      "==========================\n",
+      "Epoch: 90 i : 347 and loss: 0.044 acc: 0.9843755\r"
      ]
     }
    ],
