--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -638,7 +638,8 @@
       "\tEpoch: 59\tTrain loss: 0.028\tTrain Acc: 99.01275\n",
       "\tEpoch: 59\tTest loss: 1.238\tTest Acc: 81.287575\n",
       "==========================\n",
-      "Epoch: 60 i : 310 and loss: 0.003 acc: 1.0921875\r"
+      "\tEpoch: 60\tTrain loss: 0.022\tTrain Acc: 99.22755\n",
+      "Epoch: 60 i : 31 and loss: 0.877 acc: 0.8671875\r"
      ]
     }
    ],
