Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -639,7 +639,9 @@
       "\tEpoch: 59\tTest loss: 1.238\tTest Acc: 81.287575\n",
       "==========================\n",
       "\tEpoch: 60\tTrain loss: 0.022\tTrain Acc: 99.22755\n",
-      "Epoch: 60 i : 31 and loss: 0.877 acc: 0.8671875\r"
+      "\tEpoch: 60\tTest loss: 1.284\tTest Acc: 81.025255\n",
+      "==========================\n",
+      "Epoch: 61 i : 59 and loss: 0.001 acc: 1.0921875\r"
      ]
     }
    ],
