Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -712,7 +712,11 @@
       "\tEpoch: 89\tTrain loss: 0.042\tTrain Acc: 98.82875\n",
       "\tEpoch: 89\tTest loss: 1.748\tTest Acc: 78.450625\n",
       "==========================\n",
-      "Epoch: 90 i : 347 and loss: 0.044 acc: 0.9843755\r"
+      "\tEpoch: 90\tTrain loss: 0.039\tTrain Acc: 98.85455\n",
+      "\tEpoch: 90\tTest loss: 1.649\tTest Acc: 78.838755\n",
+      "==========================\n",
+      "\tEpoch: 91\tTrain loss: 0.031\tTrain Acc: 99.10625\n",
+      "Epoch: 91 i : 10 and loss: 1.484 acc: 0.796875\r"
      ]
     }
    ],
