Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -641,7 +641,10 @@
       "\tEpoch: 60\tTrain loss: 0.022\tTrain Acc: 99.22755\n",
       "\tEpoch: 60\tTest loss: 1.284\tTest Acc: 81.025255\n",
       "==========================\n",
-      "Epoch: 61 i : 362 and loss: 0.02 acc: 0.99218755\r"
+      "\tEpoch: 61\tTrain loss: 0.02\tTrain Acc: 99.338755\n",
+      "\tEpoch: 61\tTest loss: 1.291\tTest Acc: 81.588125\n",
+      "==========================\n",
+      "Epoch: 62 i : 17 and loss: 0.021 acc: 0.9921875\r"
      ]
     }
    ],
