Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -510,7 +510,8 @@
       "\tEpoch: 22\tTrain loss: 0.111\tTrain Acc: 96.26255\n",
       "\tEpoch: 22\tTest loss: 1.191\tTest Acc: 76.985875\n",
       "==========================\n",
-      "Epoch: 23 i : 371 and loss: 0.049 acc: 0.9921875\r"
+      "\tEpoch: 23\tTrain loss: 0.102\tTrain Acc: 96.38255\n",
+      "Epoch: 23 i : 61 and loss: 1.545 acc: 0.7812525\r"
      ]
     }
    ],
