Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -716,7 +716,12 @@
       "\tEpoch: 90\tTest loss: 1.649\tTest Acc: 78.838755\n",
       "==========================\n",
       "\tEpoch: 91\tTrain loss: 0.031\tTrain Acc: 99.10625\n",
-      "Epoch: 91 i : 10 and loss: 1.484 acc: 0.796875\r"
+      "\tEpoch: 91\tTest loss: 1.745\tTest Acc: 79.455375\n",
+      "==========================\n",
+      "\tEpoch: 92\tTrain loss: 0.036\tTrain Acc: 99.07575\n",
+      "\tEpoch: 92\tTest loss: 1.91\tTest Acc: 77.9875375\n",
+      "==========================\n",
+      "Epoch: 93 i : 60 and loss: 0.009 acc: 0.9921875\r"
      ]
     }
    ],
