Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -511,7 +511,9 @@
       "\tEpoch: 22\tTest loss: 1.191\tTest Acc: 76.985875\n",
       "==========================\n",
       "\tEpoch: 23\tTrain loss: 0.102\tTrain Acc: 96.38255\n",
-      "Epoch: 23 i : 61 and loss: 1.545 acc: 0.7812525\r"
+      "\tEpoch: 23\tTest loss: 1.252\tTest Acc: 76.798125\n",
+      "==========================\n",
+      "Epoch: 24 i : 33 and loss: 0.148 acc: 0.9609375\r"
      ]
     }
    ],
