Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -644,7 +644,7 @@
       "\tEpoch: 61\tTrain loss: 0.02\tTrain Acc: 99.338755\n",
       "\tEpoch: 61\tTest loss: 1.291\tTest Acc: 81.588125\n",
       "==========================\n",
-      "Epoch: 62 i : 297 and loss: 0.022 acc: 0.9921875\r"
+      "\tEpoch: 62\tTrain loss: 0.024\tTrain Acc: 99.17655\n"
      ]
     }
    ],
