Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -644,7 +644,10 @@
       "\tEpoch: 61\tTrain loss: 0.02\tTrain Acc: 99.338755\n",
       "\tEpoch: 61\tTest loss: 1.291\tTest Acc: 81.588125\n",
       "==========================\n",
-      "\tEpoch: 62\tTrain loss: 0.024\tTrain Acc: 99.17655\n"
+      "\tEpoch: 62\tTrain loss: 0.024\tTrain Acc: 99.17655\n",
+      "\tEpoch: 62\tTest loss: 1.383\tTest Acc: 80.655875\n",
+      "==========================\n",
+      "Epoch: 63 i : 52 and loss: 0.002 acc: 1.0843755\r"
      ]
     }
    ],
