Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -721,7 +721,10 @@
       "\tEpoch: 92\tTrain loss: 0.036\tTrain Acc: 99.07575\n",
       "\tEpoch: 92\tTest loss: 1.91\tTest Acc: 77.9875375\n",
       "==========================\n",
-      "Epoch: 93 i : 60 and loss: 0.009 acc: 0.9921875\r"
+      "\tEpoch: 93\tTrain loss: 0.029\tTrain Acc: 99.15655\n",
+      "\tEpoch: 93\tTest loss: 1.927\tTest Acc: 77.562525\n",
+      "==========================\n",
+      "Epoch: 94 i : 119 and loss: 0.015 acc: 0.9921875\r"
      ]
     }
    ],
