Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -647,7 +647,9 @@
       "\tEpoch: 62\tTrain loss: 0.024\tTrain Acc: 99.17655\n",
       "\tEpoch: 62\tTest loss: 1.383\tTest Acc: 80.655875\n",
       "==========================\n",
-      "Epoch: 63 i : 348 and loss: 0.005 acc: 1.0843755\r"
+      "\tEpoch: 63\tTrain loss: 0.021\tTrain Acc: 99.26655\n",
+      "\tEpoch: 63\tTest loss: 1.407\tTest Acc: 80.815875\n",
+      "==========================\n"
      ]
     }
    ],
