--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -649,7 +649,8 @@
       "==========================\n",
       "\tEpoch: 63\tTrain loss: 0.021\tTrain Acc: 99.26655\n",
       "\tEpoch: 63\tTest loss: 1.407\tTest Acc: 80.815875\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 64 i : 90 and loss: 0.013 acc: 0.9921875\r"
      ]
     }
    ],
