Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -724,7 +724,10 @@
       "\tEpoch: 93\tTrain loss: 0.029\tTrain Acc: 99.15655\n",
       "\tEpoch: 93\tTest loss: 1.927\tTest Acc: 77.562525\n",
       "==========================\n",
-      "Epoch: 94 i : 119 and loss: 0.015 acc: 0.9921875\r"
+      "\tEpoch: 94\tTrain loss: 0.035\tTrain Acc: 99.06875\n",
+      "\tEpoch: 94\tTest loss: 2.067\tTest Acc: 77.463755\n",
+      "==========================\n",
+      "Epoch: 95 i : 159 and loss: 0.018 acc: 1.0921875\r"
      ]
     }
    ],
