Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -513,7 +513,8 @@
       "\tEpoch: 23\tTrain loss: 0.102\tTrain Acc: 96.38255\n",
       "\tEpoch: 23\tTest loss: 1.252\tTest Acc: 76.798125\n",
       "==========================\n",
-      "Epoch: 24 i : 347 and loss: 0.179 acc: 0.9375375\r"
+      "\tEpoch: 24\tTrain loss: 0.096\tTrain Acc: 96.59225\n",
+      "Epoch: 24 i : 1 and loss: 1.258 acc: 0.7421875\r"
      ]
     }
    ],
