--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -650,7 +650,7 @@
       "\tEpoch: 63\tTrain loss: 0.021\tTrain Acc: 99.26655\n",
       "\tEpoch: 63\tTest loss: 1.407\tTest Acc: 80.815875\n",
       "==========================\n",
-      "Epoch: 64 i : 297 and loss: 0.032 acc: 0.9921875\r"
+      "\tEpoch: 64\tTrain loss: 0.019\tTrain Acc: 99.41475\n"
      ]
     }
    ],
