Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -514,7 +514,9 @@
       "\tEpoch: 23\tTest loss: 1.252\tTest Acc: 76.798125\n",
       "==========================\n",
       "\tEpoch: 24\tTrain loss: 0.096\tTrain Acc: 96.59225\n",
-      "Epoch: 24 i : 1 and loss: 1.258 acc: 0.7421875\r"
+      "\tEpoch: 24\tTest loss: 1.179\tTest Acc: 77.334375\n",
+      "==========================\n",
+      "Epoch: 25 i : 11 and loss: 0.117 acc: 0.9609375\r"
      ]
     }
    ],
