--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -727,7 +727,10 @@
       "\tEpoch: 94\tTrain loss: 0.035\tTrain Acc: 99.06875\n",
       "\tEpoch: 94\tTest loss: 2.067\tTest Acc: 77.463755\n",
       "==========================\n",
-      "Epoch: 95 i : 159 and loss: 0.018 acc: 1.0921875\r"
+      "\tEpoch: 95\tTrain loss: 0.03\tTrain Acc: 99.144755\n",
+      "\tEpoch: 95\tTest loss: 2.071\tTest Acc: 78.772555\n",
+      "==========================\n",
+      "Epoch: 96 i : 304 and loss: 0.01 acc: 1.09843755\r"
      ]
     }
    ],
