Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -653,7 +653,9 @@
       "\tEpoch: 64\tTrain loss: 0.019\tTrain Acc: 99.41475\n",
       "\tEpoch: 64\tTest loss: 1.431\tTest Acc: 80.525875\n",
       "==========================\n",
-      "Epoch: 65 i : 352 and loss: 0.003 acc: 1.0218755\r"
+      "\tEpoch: 65\tTrain loss: 0.024\tTrain Acc: 99.20275\n",
+      "\tEpoch: 65\tTest loss: 1.331\tTest Acc: 81.072525\n",
+      "==========================\n"
      ]
     }
    ],
