Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -730,7 +730,10 @@
       "\tEpoch: 95\tTrain loss: 0.03\tTrain Acc: 99.144755\n",
       "\tEpoch: 95\tTest loss: 2.071\tTest Acc: 78.772555\n",
       "==========================\n",
-      "Epoch: 96 i : 304 and loss: 0.01 acc: 1.09843755\r"
+      "\tEpoch: 96\tTrain loss: 0.038\tTrain Acc: 98.93455\n",
+      "\tEpoch: 96\tTest loss: 2.066\tTest Acc: 77.425125\n",
+      "==========================\n",
+      "Epoch: 97 i : 349 and loss: 0.003 acc: 1.0843755\r"
      ]
     }
    ],
