Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -657,6 +657,13 @@
       "\tEpoch: 65\tTest loss: 1.331\tTest Acc: 81.072525\n",
       "==========================\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 66 i : 98 and loss: 0.012 acc: 0.9921875\r"
+     ]
     }
    ],
    "source": [
