Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -733,7 +733,10 @@
       "\tEpoch: 96\tTrain loss: 0.038\tTrain Acc: 98.93455\n",
       "\tEpoch: 96\tTest loss: 2.066\tTest Acc: 77.425125\n",
       "==========================\n",
-      "Epoch: 97 i : 349 and loss: 0.003 acc: 1.0843755\r"
+      "\tEpoch: 97\tTrain loss: 0.031\tTrain Acc: 99.10655\n",
+      "\tEpoch: 97\tTest loss: 1.918\tTest Acc: 78.710625\n",
+      "==========================\n",
+      "Epoch: 98 i : 389 and loss: 0.001 acc: 1.0218755\r"
      ]
     }
    ],
