Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -662,7 +662,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 66 i : 389 and loss: 0.015 acc: 0.9921875\r"
+      "\tEpoch: 66\tTrain loss: 0.021\tTrain Acc: 99.24875\n",
+      "\tEpoch: 66\tTest loss: 1.425\tTest Acc: 80.895755\n",
+      "==========================\n",
+      "Epoch: 67 i : 46 and loss: 0.023 acc: 0.9921875\r"
      ]
     }
    ],
