Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -516,7 +516,8 @@
       "\tEpoch: 24\tTrain loss: 0.096\tTrain Acc: 96.59225\n",
       "\tEpoch: 24\tTest loss: 1.179\tTest Acc: 77.334375\n",
       "==========================\n",
-      "Epoch: 25 i : 377 and loss: 0.108 acc: 0.9687575\r"
+      "\tEpoch: 25\tTrain loss: 0.097\tTrain Acc: 96.66255\n",
+      "Epoch: 25 i : 72 and loss: 1.294 acc: 0.8125255\r"
      ]
     }
    ],
