Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -517,7 +517,9 @@
       "\tEpoch: 24\tTest loss: 1.179\tTest Acc: 77.334375\n",
       "==========================\n",
       "\tEpoch: 25\tTrain loss: 0.097\tTrain Acc: 96.66255\n",
-      "Epoch: 25 i : 72 and loss: 1.294 acc: 0.8125255\r"
+      "\tEpoch: 25\tTest loss: 1.23\tTest Acc: 77.9675555\n",
+      "==========================\n",
+      "Epoch: 26 i : 38 and loss: 0.137 acc: 0.9531255\r"
      ]
     }
    ],
