Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -665,7 +665,10 @@
       "\tEpoch: 66\tTrain loss: 0.021\tTrain Acc: 99.24875\n",
       "\tEpoch: 66\tTest loss: 1.425\tTest Acc: 80.895755\n",
       "==========================\n",
-      "Epoch: 67 i : 378 and loss: 0.001 acc: 1.0656255\r"
+      "\tEpoch: 67\tTrain loss: 0.025\tTrain Acc: 99.13875\n",
+      "\tEpoch: 67\tTest loss: 1.368\tTest Acc: 81.155575\n",
+      "==========================\n",
+      "Epoch: 68 i : 38 and loss: 0.017 acc: 0.9921875\r"
      ]
     }
    ],
