Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -847,10 +847,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:51:20.738Z"
+     "end_time": "2019-05-03T21:24:58.288587Z",
+     "start_time": "2019-05-03T21:24:58.253475Z"
     },
     "code_folding": [
      1,
@@ -929,13 +930,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:51:22.779Z"
+     "end_time": "2019-05-03T21:25:03.632636Z",
+     "start_time": "2019-05-03T21:25:03.611248Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From  -1.0  to  1.0  with  21  total number of coordinate:  441\n"
+     ]
+    }
+   ],
    "source": [
     "# create the coordinates\n",
     "numebr_of_points = 21 ; small_range = -1.0 ; large_range =  1.0\n",
