--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -668,7 +668,10 @@
       "\tEpoch: 67\tTrain loss: 0.025\tTrain Acc: 99.13875\n",
       "\tEpoch: 67\tTest loss: 1.368\tTest Acc: 81.155575\n",
       "==========================\n",
-      "Epoch: 68 i : 382 and loss: 0.003 acc: 1.0921875\r"
+      "\tEpoch: 68\tTrain loss: 0.019\tTrain Acc: 99.31755\n",
+      "\tEpoch: 68\tTest loss: 1.523\tTest Acc: 79.745625\n",
+      "==========================\n",
+      "Epoch: 69 i : 43 and loss: 0.003 acc: 1.0921875\r"
      ]
     }
    ],
