Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -519,7 +519,9 @@
       "\tEpoch: 25\tTrain loss: 0.097\tTrain Acc: 96.66255\n",
       "\tEpoch: 25\tTest loss: 1.23\tTest Acc: 77.9675555\n",
       "==========================\n",
-      "Epoch: 26 i : 370 and loss: 0.082 acc: 0.9765625\r"
+      "\tEpoch: 26\tTrain loss: 0.088\tTrain Acc: 96.99625\n",
+      "\tEpoch: 26\tTest loss: 1.218\tTest Acc: 78.065125\n",
+      "==========================\n"
      ]
     }
    ],
