--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -671,7 +671,10 @@
       "\tEpoch: 68\tTrain loss: 0.019\tTrain Acc: 99.31755\n",
       "\tEpoch: 68\tTest loss: 1.523\tTest Acc: 79.745625\n",
       "==========================\n",
-      "Epoch: 69 i : 305 and loss: 0.003 acc: 1.0843755\r"
+      "\tEpoch: 69\tTrain loss: 0.015\tTrain Acc: 99.48875\n",
+      "\tEpoch: 69\tTest loss: 1.354\tTest Acc: 81.375255\n",
+      "==========================\n",
+      "Epoch: 70 i : 14 and loss: 0.006 acc: 1.0921875\r"
      ]
     }
    ],
