--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -521,7 +521,8 @@
       "==========================\n",
       "\tEpoch: 26\tTrain loss: 0.088\tTrain Acc: 96.99625\n",
       "\tEpoch: 26\tTest loss: 1.218\tTest Acc: 78.065125\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 27 i : 63 and loss: 0.175 acc: 0.9375125\r"
      ]
     }
    ],
