Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -674,7 +674,10 @@
       "\tEpoch: 69\tTrain loss: 0.015\tTrain Acc: 99.48875\n",
       "\tEpoch: 69\tTest loss: 1.354\tTest Acc: 81.375255\n",
       "==========================\n",
-      "Epoch: 70 i : 359 and loss: 0.048 acc: 0.9843755\r"
+      "\tEpoch: 70\tTrain loss: 0.022\tTrain Acc: 99.25255\n",
+      "\tEpoch: 70\tTest loss: 1.451\tTest Acc: 80.755625\n",
+      "==========================\n",
+      "Epoch: 71 i : 18 and loss: 0.067 acc: 0.9843755\r"
      ]
     }
    ],
