--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -522,7 +522,8 @@
       "\tEpoch: 26\tTrain loss: 0.088\tTrain Acc: 96.99625\n",
       "\tEpoch: 26\tTest loss: 1.218\tTest Acc: 78.065125\n",
       "==========================\n",
-      "Epoch: 27 i : 331 and loss: 0.042 acc: 0.9921875\r"
+      "\tEpoch: 27\tTrain loss: 0.077\tTrain Acc: 97.36555\n",
+      "Epoch: 27 i : 4 and loss: 1.125 acc: 0.7734375\r"
      ]
     }
    ],
