--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -677,7 +677,10 @@
       "\tEpoch: 70\tTrain loss: 0.022\tTrain Acc: 99.25255\n",
       "\tEpoch: 70\tTest loss: 1.451\tTest Acc: 80.755625\n",
       "==========================\n",
-      "Epoch: 71 i : 361 and loss: 0.002 acc: 1.0921875\r"
+      "\tEpoch: 71\tTrain loss: 0.021\tTrain Acc: 99.32455\n",
+      "\tEpoch: 71\tTest loss: 1.382\tTest Acc: 81.352575\n",
+      "==========================\n",
+      "Epoch: 72 i : 20 and loss: 0.008 acc: 1.0843755\r"
      ]
     }
    ],
