--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -523,7 +523,9 @@
       "\tEpoch: 26\tTest loss: 1.218\tTest Acc: 78.065125\n",
       "==========================\n",
       "\tEpoch: 27\tTrain loss: 0.077\tTrain Acc: 97.36555\n",
-      "Epoch: 27 i : 4 and loss: 1.125 acc: 0.7734375\r"
+      "\tEpoch: 27\tTest loss: 1.373\tTest Acc: 78.013755\n",
+      "==========================\n",
+      "Epoch: 28 i : 22 and loss: 0.229 acc: 0.9375625\r"
      ]
     }
    ],
