Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -680,7 +680,9 @@
       "\tEpoch: 71\tTrain loss: 0.021\tTrain Acc: 99.32455\n",
       "\tEpoch: 71\tTest loss: 1.382\tTest Acc: 81.352575\n",
       "==========================\n",
-      "Epoch: 72 i : 333 and loss: 0.031 acc: 0.9843755\r"
+      "\tEpoch: 72\tTrain loss: 0.018\tTrain Acc: 99.36655\n",
+      "\tEpoch: 72\tTest loss: 1.332\tTest Acc: 82.013755\n",
+      "==========================\n"
      ]
     }
    ],
