Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -682,7 +682,8 @@
       "==========================\n",
       "\tEpoch: 72\tTrain loss: 0.018\tTrain Acc: 99.36655\n",
       "\tEpoch: 72\tTest loss: 1.332\tTest Acc: 82.013755\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 73 i : 112 and loss: 0.011 acc: 0.9921875\r"
      ]
     }
    ],
