Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -683,7 +683,10 @@
       "\tEpoch: 72\tTrain loss: 0.018\tTrain Acc: 99.36655\n",
       "\tEpoch: 72\tTest loss: 1.332\tTest Acc: 82.013755\n",
       "==========================\n",
-      "Epoch: 73 i : 341 and loss: 0.0 acc: 1.0.0921875\r"
+      "\tEpoch: 73\tTrain loss: 0.019\tTrain Acc: 99.37625\n",
+      "\tEpoch: 73\tTest loss: 1.339\tTest Acc: 81.498755\n",
+      "==========================\n",
+      "Epoch: 74 i : 5 and loss: 0.007 acc: 1.0921875\r"
      ]
     }
    ],
