Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -525,7 +525,8 @@
       "\tEpoch: 27\tTrain loss: 0.077\tTrain Acc: 97.36555\n",
       "\tEpoch: 27\tTest loss: 1.373\tTest Acc: 78.013755\n",
       "==========================\n",
-      "Epoch: 28 i : 362 and loss: 0.026 acc: 0.9843755\r"
+      "\tEpoch: 28\tTrain loss: 0.07\tTrain Acc: 97.677525\n",
+      "Epoch: 28 i : 67 and loss: 2.044 acc: 0.7187575\r"
      ]
     }
    ],
