Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -686,7 +686,10 @@
       "\tEpoch: 73\tTrain loss: 0.019\tTrain Acc: 99.37625\n",
       "\tEpoch: 73\tTest loss: 1.339\tTest Acc: 81.498755\n",
       "==========================\n",
-      "Epoch: 74 i : 328 and loss: 0.008 acc: 0.9921875\r"
+      "\tEpoch: 74\tTrain loss: 0.018\tTrain Acc: 99.40855\n",
+      "\tEpoch: 74\tTest loss: 1.372\tTest Acc: 80.465875\n",
+      "==========================\n",
+      "Epoch: 75 i : 14 and loss: 0.015 acc: 0.9921875\r"
      ]
     }
    ],
