--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -526,7 +526,9 @@
       "\tEpoch: 27\tTest loss: 1.373\tTest Acc: 78.013755\n",
       "==========================\n",
       "\tEpoch: 28\tTrain loss: 0.07\tTrain Acc: 97.677525\n",
-      "Epoch: 28 i : 67 and loss: 2.044 acc: 0.7187575\r"
+      "\tEpoch: 28\tTest loss: 1.297\tTest Acc: 78.558125\n",
+      "==========================\n",
+      "Epoch: 29 i : 54 and loss: 0.151 acc: 0.9296875\r"
      ]
     }
    ],
