--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -689,7 +689,10 @@
       "\tEpoch: 74\tTrain loss: 0.018\tTrain Acc: 99.40855\n",
       "\tEpoch: 74\tTest loss: 1.372\tTest Acc: 80.465875\n",
       "==========================\n",
-      "Epoch: 75 i : 360 and loss: 0.002 acc: 1.0218755\r"
+      "\tEpoch: 75\tTrain loss: 0.016\tTrain Acc: 99.47655\n",
+      "\tEpoch: 75\tTest loss: 1.505\tTest Acc: 80.772525\n",
+      "==========================\n",
+      "Epoch: 76 i : 23 and loss: 0.026 acc: 0.9921875\r"
      ]
     }
    ],
