Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -692,7 +692,8 @@
       "\tEpoch: 75\tTrain loss: 0.016\tTrain Acc: 99.47655\n",
       "\tEpoch: 75\tTest loss: 1.505\tTest Acc: 80.772525\n",
       "==========================\n",
-      "Epoch: 76 i : 252 and loss: 0.005 acc: 1.0921875\r"
+      "\tEpoch: 76\tTrain loss: 0.021\tTrain Acc: 99.29875\n",
+      "Epoch: 76 i : 4 and loss: 1.001 acc: 0.8437575\r"
      ]
     }
    ],
