Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -693,7 +693,9 @@
       "\tEpoch: 75\tTest loss: 1.505\tTest Acc: 80.772525\n",
       "==========================\n",
       "\tEpoch: 76\tTrain loss: 0.021\tTrain Acc: 99.29875\n",
-      "Epoch: 76 i : 4 and loss: 1.001 acc: 0.8437575\r"
+      "\tEpoch: 76\tTest loss: 1.383\tTest Acc: 81.172525\n",
+      "==========================\n",
+      "Epoch: 77 i : 145 and loss: 0.07 acc: 0.98437575\r"
      ]
     }
    ],
