--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -528,7 +528,10 @@
       "\tEpoch: 28\tTrain loss: 0.07\tTrain Acc: 97.677525\n",
       "\tEpoch: 28\tTest loss: 1.297\tTest Acc: 78.558125\n",
       "==========================\n",
-      "Epoch: 29 i : 387 and loss: 0.032 acc: 0.9921875\r"
+      "\tEpoch: 29\tTrain loss: 0.064\tTrain Acc: 97.85875\n",
+      "\tEpoch: 29\tTest loss: 1.554\tTest Acc: 77.275875\n",
+      "==========================\n",
+      "Epoch: 30 i : 14 and loss: 0.091 acc: 0.9531255\r"
      ]
     }
    ],
