Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -695,7 +695,10 @@
       "\tEpoch: 76\tTrain loss: 0.021\tTrain Acc: 99.29875\n",
       "\tEpoch: 76\tTest loss: 1.383\tTest Acc: 81.172525\n",
       "==========================\n",
-      "Epoch: 77 i : 375 and loss: 0.06 acc: 0.98437575\r"
+      "\tEpoch: 77\tTrain loss: 0.013\tTrain Acc: 99.60275\n",
+      "\tEpoch: 77\tTest loss: 1.515\tTest Acc: 81.242525\n",
+      "==========================\n",
+      "Epoch: 78 i : 41 and loss: 0.008 acc: 1.0765625\r"
      ]
     }
    ],
