Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -698,7 +698,10 @@
       "\tEpoch: 77\tTrain loss: 0.013\tTrain Acc: 99.60275\n",
       "\tEpoch: 77\tTest loss: 1.515\tTest Acc: 81.242525\n",
       "==========================\n",
-      "Epoch: 78 i : 386 and loss: 0.02 acc: 0.98437575\r"
+      "\tEpoch: 78\tTrain loss: 0.024\tTrain Acc: 99.19455\n",
+      "\tEpoch: 78\tTest loss: 1.268\tTest Acc: 80.795255\n",
+      "==========================\n",
+      "Epoch: 79 i : 51 and loss: 0.01 acc: 1.00843755\r"
      ]
     }
    ],
