--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -531,7 +531,8 @@
       "\tEpoch: 29\tTrain loss: 0.064\tTrain Acc: 97.85875\n",
       "\tEpoch: 29\tTest loss: 1.554\tTest Acc: 77.275875\n",
       "==========================\n",
-      "Epoch: 30 i : 354 and loss: 0.014 acc: 1.0921875\r"
+      "\tEpoch: 30\tTrain loss: 0.052\tTrain Acc: 98.25575\n",
+      "Epoch: 30 i : 46 and loss: 2.223 acc: 0.7578125\r"
      ]
     }
    ],
