Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -701,7 +701,8 @@
       "\tEpoch: 78\tTrain loss: 0.024\tTrain Acc: 99.19455\n",
       "\tEpoch: 78\tTest loss: 1.268\tTest Acc: 80.795255\n",
       "==========================\n",
-      "Epoch: 79 i : 207 and loss: 0.009 acc: 0.9921875\r"
+      "\tEpoch: 79\tTrain loss: 0.012\tTrain Acc: 99.58875\n",
+      "Epoch: 79 i : 12 and loss: 1.41 acc: 0.77343755\r"
      ]
     }
    ],
