Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -532,7 +532,9 @@
       "\tEpoch: 29\tTest loss: 1.554\tTest Acc: 77.275875\n",
       "==========================\n",
       "\tEpoch: 30\tTrain loss: 0.052\tTrain Acc: 98.25575\n",
-      "Epoch: 30 i : 46 and loss: 2.223 acc: 0.7578125\r"
+      "\tEpoch: 30\tTest loss: 1.612\tTest Acc: 76.821875\n",
+      "==========================\n",
+      "Epoch: 31 i : 44 and loss: 0.033 acc: 0.9921875\r"
      ]
     }
    ],
