Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -704,7 +704,8 @@
       "\tEpoch: 79\tTrain loss: 0.012\tTrain Acc: 99.58875\n",
       "\tEpoch: 79\tTest loss: 1.422\tTest Acc: 81.450625\n",
       "==========================\n",
-      "Epoch: 80 i : 298 and loss: 0.012 acc: 0.9921875\r"
+      "\tEpoch: 80\tTrain loss: 0.023\tTrain Acc: 99.25875\n",
+      "Epoch: 80 i : 44 and loss: 2.042 acc: 0.7656255\r"
      ]
     }
    ],
