Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -707,7 +707,10 @@
       "\tEpoch: 80\tTrain loss: 0.023\tTrain Acc: 99.25875\n",
       "\tEpoch: 80\tTest loss: 1.429\tTest Acc: 79.996255\n",
       "==========================\n",
-      "Epoch: 81 i : 307 and loss: 0.003 acc: 1.0921875\r"
+      "\tEpoch: 81\tTrain loss: 0.02\tTrain Acc: 99.308755\n",
+      "\tEpoch: 81\tTest loss: 1.4\tTest Acc: 80.96543755\n",
+      "==========================\n",
+      "Epoch: 82 i : 4 and loss: 0.013 acc: 0.9921875\r"
      ]
     }
    ],
