Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -534,7 +534,10 @@
       "\tEpoch: 30\tTrain loss: 0.052\tTrain Acc: 98.25575\n",
       "\tEpoch: 30\tTest loss: 1.612\tTest Acc: 76.821875\n",
       "==========================\n",
-      "Epoch: 31 i : 378 and loss: 0.079 acc: 0.9687575\r"
+      "\tEpoch: 31\tTrain loss: 0.055\tTrain Acc: 98.12755\n",
+      "\tEpoch: 31\tTest loss: 1.489\tTest Acc: 78.458125\n",
+      "==========================\n",
+      "Epoch: 32 i : 3 and loss: 0.015 acc: 0.9921875\r"
      ]
     }
    ],
