--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -710,7 +710,8 @@
       "\tEpoch: 81\tTrain loss: 0.02\tTrain Acc: 99.308755\n",
       "\tEpoch: 81\tTest loss: 1.4\tTest Acc: 80.96543755\n",
       "==========================\n",
-      "Epoch: 82 i : 314 and loss: 0.059 acc: 0.9843755\r"
+      "\tEpoch: 82\tTrain loss: 0.017\tTrain Acc: 99.41475\n",
+      "Epoch: 82 i : 77 and loss: 2.197 acc: 0.7421875\r"
      ]
     }
    ],
