Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -711,7 +711,9 @@
       "\tEpoch: 81\tTest loss: 1.4\tTest Acc: 80.96543755\n",
       "==========================\n",
       "\tEpoch: 82\tTrain loss: 0.017\tTrain Acc: 99.41475\n",
-      "Epoch: 82 i : 77 and loss: 2.197 acc: 0.7421875\r"
+      "\tEpoch: 82\tTest loss: 1.353\tTest Acc: 81.615625\n",
+      "==========================\n",
+      "Epoch: 83 i : 85 and loss: 0.008 acc: 1.0921875\r"
      ]
     }
    ],
