Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -713,7 +713,8 @@
       "\tEpoch: 82\tTrain loss: 0.017\tTrain Acc: 99.41475\n",
       "\tEpoch: 82\tTest loss: 1.353\tTest Acc: 81.615625\n",
       "==========================\n",
-      "Epoch: 83 i : 309 and loss: 0.006 acc: 0.9921875\r"
+      "\tEpoch: 83\tTrain loss: 0.015\tTrain Acc: 99.49475\n",
+      "Epoch: 83 i : 65 and loss: 1.158 acc: 0.8281255\r"
      ]
     }
    ],
