Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -714,7 +714,9 @@
       "\tEpoch: 82\tTest loss: 1.353\tTest Acc: 81.615625\n",
       "==========================\n",
       "\tEpoch: 83\tTrain loss: 0.015\tTrain Acc: 99.49475\n",
-      "Epoch: 83 i : 65 and loss: 1.158 acc: 0.8281255\r"
+      "\tEpoch: 83\tTest loss: 1.33\tTest Acc: 81.4575375\n",
+      "==========================\n",
+      "Epoch: 84 i : 82 and loss: 0.001 acc: 1.0921875\r"
      ]
     }
    ],
