--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -537,7 +537,8 @@
       "\tEpoch: 31\tTrain loss: 0.055\tTrain Acc: 98.12755\n",
       "\tEpoch: 31\tTest loss: 1.489\tTest Acc: 78.458125\n",
       "==========================\n",
-      "Epoch: 32 i : 339 and loss: 0.011 acc: 1.0921875\r"
+      "\tEpoch: 32\tTrain loss: 0.057\tTrain Acc: 98.11255\n",
+      "Epoch: 32 i : 27 and loss: 1.702 acc: 0.8125875\r"
      ]
     }
    ],
