Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -538,7 +538,9 @@
       "\tEpoch: 31\tTest loss: 1.489\tTest Acc: 78.458125\n",
       "==========================\n",
       "\tEpoch: 32\tTrain loss: 0.057\tTrain Acc: 98.11255\n",
-      "Epoch: 32 i : 27 and loss: 1.702 acc: 0.8125875\r"
+      "\tEpoch: 32\tTest loss: 1.533\tTest Acc: 76.968125\n",
+      "==========================\n",
+      "Epoch: 33 i : 29 and loss: 0.035 acc: 0.9843755\r"
      ]
     }
    ],
