--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -716,7 +716,8 @@
       "\tEpoch: 83\tTrain loss: 0.015\tTrain Acc: 99.49475\n",
       "\tEpoch: 83\tTest loss: 1.33\tTest Acc: 81.4575375\n",
       "==========================\n",
-      "Epoch: 84 i : 268 and loss: 0.011 acc: 0.9921875\r"
+      "\tEpoch: 84\tTrain loss: 0.016\tTrain Acc: 99.47675\n",
+      "Epoch: 84 i : 65 and loss: 1.204 acc: 0.8125875\r"
      ]
     }
    ],
