Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -717,7 +717,9 @@
       "\tEpoch: 83\tTest loss: 1.33\tTest Acc: 81.4575375\n",
       "==========================\n",
       "\tEpoch: 84\tTrain loss: 0.016\tTrain Acc: 99.47675\n",
-      "Epoch: 84 i : 65 and loss: 1.204 acc: 0.8125875\r"
+      "\tEpoch: 84\tTest loss: 1.479\tTest Acc: 81.335375\n",
+      "==========================\n",
+      "Epoch: 85 i : 84 and loss: 0.002 acc: 1.0921875\r"
      ]
     }
    ],
