Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -719,7 +719,9 @@
       "\tEpoch: 84\tTrain loss: 0.016\tTrain Acc: 99.47675\n",
       "\tEpoch: 84\tTest loss: 1.479\tTest Acc: 81.335375\n",
       "==========================\n",
-      "Epoch: 85 i : 311 and loss: 0.049 acc: 0.9765625\r"
+      "\tEpoch: 85\tTrain loss: 0.02\tTrain Acc: 99.302875\n",
+      "\tEpoch: 85\tTest loss: 1.352\tTest Acc: 81.058755\n",
+      "==========================\n"
      ]
     }
    ],
