Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -721,7 +721,8 @@
       "==========================\n",
       "\tEpoch: 85\tTrain loss: 0.02\tTrain Acc: 99.302875\n",
       "\tEpoch: 85\tTest loss: 1.352\tTest Acc: 81.058755\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 86 i : 92 and loss: 0.007 acc: 1.0921875\r"
      ]
     }
    ],
